feat: Revert branch page

--- a/prime_admin/templates/lms/settings_sidebar.html
+++ b/prime_admin/templates/lms/settings_sidebar.html
@@ -50,6 +50,12 @@
                     </a>
                 </li>
                 <li>
+                    <a id="li_branches" href="{{url_for('lms.branches')}}" class="">
+                        <i class="metismenu-icon pe-7s-culture icon-gradient bg-premium-dark" aria-hidden="true"></i>
+                        Branches
+                    </a>
+                </li>
+                <li>
                     <a id="li_other_expenses" href="{{url_for('lms.other_expenses_settings')}}" class="">
                         <i class="metismenu-icon pe-7s-settings icon-gradient bg-premium-dark" aria-hidden="true"></i>
                         Other Expenses
