feat: fund_wallet_services.add_fund() function

--- a/prime_admin/templates/lms/withdraw_modal.html
+++ b/prime_admin/templates/lms/withdraw_modal.html
@@ -19,7 +19,7 @@
                             value="">
                             
                             <div class="form-row">
-                                <div class="col-md-6">
+                                <div class="col-md-3">
                                     <div class="position-relative form-group">
                                         <label for="from_what" class="">From</label>
                                         <select name="from_what" id="from_what" class="form-control" required="">
@@ -32,6 +32,26 @@
                                             </option>
                                             <option value="Fund 2">
                                                 Fund 2
+                                            </option>
+                                        </select>
+                                        <div class="valid-feedback">
+                                            Looks good!
+                                        </div>
+                                        <div class="invalid-feedback">
+                                            Please provide value
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="position-relative form-group">
+                                        <label for="to_what" class="">To</label>
+                                        <select name="to_what" id="to_what" class="form-control" required="">
+                                            <option value="">Choose...</option>
+                                            <option value="FUND WALLET">
+                                                Fund Wallet
+                                            </option>
+                                            <option value="PROFIT">
+                                                Profit
                                             </option>
                                         </select>
                                         <div class="valid-feedback">
