feat: COH added

--- a/prime_admin/templates/lms/withdraw_modal.html
+++ b/prime_admin/templates/lms/withdraw_modal.html
@@ -53,6 +53,9 @@
                                             <option value="PROFIT">
                                                 Profit
                                             </option>
+                                            <option value="COH">
+                                                COH
+                                            </option>
                                             <option value="FINANCIAL ASSISTANCE">
                                                 Financial Assistance
                                             </option>
