--- a/prime_admin/templates/lms/payroll/create_payslip_page.html
+++ b/prime_admin/templates/lms/payroll/create_payslip_page.html
@@ -204,14 +204,17 @@
         });
 
         $("#cash_advance").change(function(){
+            updateTotalDeduction();
             updateTotalAmountDue();
         });
 
         $("#government_benefits").change(function(){
+            updateTotalDeduction();
             updateTotalAmountDue();
         });
 
         $("#accommodation_deduction").change(function(){
+            updateTotalDeduction();
             updateTotalAmountDue();
         });
 
