--- a/prime_admin/templates/lms/registration.html
+++ b/prime_admin/templates/lms/registration.html
@@ -182,10 +182,15 @@
             var selected = dtbl_search.row('.selected').data();
             
             $.ajax({
-                url: '/learning-management/api/clients/' + selected[0],
+                url: '/learning-management/api/clients/' + selected[0] + "?check_existing_client=true",
                 type: "GET",
                 contentType: "application/json; charset=utf-8",
                 success: function(response) {
+                    if (response.status == "error"){
+                        alert(response.message);
+                        return;
+                    }
+
                     if(response.data.status == "pre_registered" && response.data.is_oriented == false){
                         console.log(response.data);
     
